sumo/tests/netconvert/errors/unknown_vclass/options.netconvert
-e input_edges.edg.xml -n input_nodes.nod.xml -o net.net.xml
